# VSLS_2025

./: .gitattributes  .gitignore  README.md  pyproject.toml
.dvc/: config
data/raw/: AGAGE-GCMS-Medusa_TOB_cfc-11.nc.dvc  AGAGE-GCMS-Medusa_TOB_cfc-12.nc.dvc  AGAGE-GCMS-Medusa_TOB_ch2cl2.nc.dvc  AGAGE-GCMS-Medusa_TOB_ch3br.nc.dvc  AGAGE-GCMS-Medusa_TOB_ch3cl.nc.dvc  AGAGE-GCMS-Medusa_TOB_chcl3.nc.dvc  AGAGE-GCMS-Medusa_TOB_h-1211.nc.dvc  AGAGE-GCMS-Medusa_TOB_hcfc-22.nc.dvc  AGAGE-GCMS-Medusa_TOB_hfc-125.nc.dvc  AGAGE-GCMS-Medusa_TOB_hfc-32.nc.dvc  AGAGE-GCMS-Medusa_TOB_pce.nc.dvc  AGAGE-GCMS-Medusa_TOB_sf6.nc.dvc
notebooks/: exploration.ipynb
results/: fitting_parameters.csv  load_results.ipynb
src/: pyproject.toml
src/vsls_2025/: custom_fit_func.py  plotting.py
