[project]
authors = [{name = "Amsoht", email = "57802852+Amsoht@users.noreply.github.com"}]
name = "VSLS_2025"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
vsls_2025 = { path = ".", editable = true }
iau-baseline = { path = 'c:\GitHub\Python_Projects\IAU_baseline', editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
xarray = ">=2026.1.0,<2027"
pip = ">=26.0,<27"
ipykernel = ">=7.1.0,<8"
netcdf4 = ">=1.7.4,<2"
h5netcdf = ">=1.8.1,<2"
