[project]
authors = [{name = "Amsoht", email = "57802852+Amsoht@users.noreply.github.com"}]
name = "VSLS_2025"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
vsls_2025 = { path = "src", editable = true }
iau-baseline = { url = "https://zenodo.org/records/18668744/files/AtmosphericAngels/IAU_baseline-v1.0.1.zip" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
xarray = ">=2026.1.0,<2027"
pip = ">=26.0,<27"
ipykernel = ">=7.1.0,<8"
netcdf4 = ">=1.7.4,<2"
h5netcdf = ">=1.8.1,<2"
numpy = ">=2.4.2,<3"
matplotlib = ">=3.10.8,<4"
scipy = ">=1.17.0,<2"
ipympl = ">=0.10.0,<0.11"
seaborn = ">=0.13.2,<0.14"
holoviews = ">=1.22.1,<2"
bokeh = ">=3.8.2,<4"
nbstripout = ">=0.9.0,<0.10"
nbdime = ">=4.0.3,<5"
dvc = ">=3.66.1,<4"

